@@ -302,6 +302,13 @@ sub start {
             open L, '>', $info{'logfile'} or 
                 error 'Could not create log file ' . $info{'logfile'};
             chmod 0640, $info{'logfile'};
+            my $g;
+            if ($info{'owneruid'} < 500) {
+                $g = (getgrnam 'adm')[2];
+            } else {
+                $g = $info{'ownergid'};
+            }
+            chown $info{'owneruid'}, $g, $info{'logfile'};
             close L;
         }
         $logsize = (stat $info{'logfile'})[7];
