@@ -16,8 +16,12 @@ postgresql-common (90) UNRELEASED; urgency=low
     PostgreSQL 8.3. (Closes: #491276)
   * pg_ctlcluster: Fix typo in pg_ctl error messages. Thanks to Aaron Schrab!
     (Closes: #488280)
+  * pg_createcluster, pg_ctlcluster: Set the log file group to "adm" if
+    the cluster is owned by a system user (like "postgres"). In the "owned by
+    human user" case, keep it as that user's primary group. Check both cases in
+    the test suite. (Closes: #483017)
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 21 Jul 2008 10:14:45 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon, 21 Jul 2008 10:51:52 +0200
 
 postgresql-common (89) unstable; urgency=low
 
